# AgentExtractor

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_codex_resolver.py
agentextractor/: __init__.py  __main__.py  desktop.py
agentextractor/adapters/: __init__.py
agentextractor/cli/: __init__.py  interactive.py  main.py
agentextractor/core/: __init__.py  agent_self_description.py  classifier.py  codex_resolver.py  content_analyzer.py  detector.py  global_scanner.py  importer.py  mcp_probe.py  models.py  package_models.py  packager.py  profiler.py  review.py  rule_engine.py  scanner.py  schema.py
agentextractor/plugins/: __init__.py
agentextractor/rules/: __init__.py  claude_code.yaml  codex.yaml  cursor.yaml  generic.yaml  hermes.yaml  kiro.yaml  openclaw.yaml  trae.yaml
agentextractor/ui/: __init__.py  app.py
agentextractor/web/: __init__.py  server.py  templates.py
tests/: conftest.py
tests/unit/: test_models.py  test_rule_engine.py
