[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentextractor"
version = "0.1.0"
description = "智能体提取工具 - 扫描分析 Agent 仓库，识别并打包智能体能力"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "EchoMind Team"}
]
keywords = ["ai", "agent", "extraction", "migration", "mcp", "skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "textual>=0.47.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.90.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
agentextractor = "agentextractor.__main__:main"

[project.urls]
Homepage = "https://github.com/EastSword/AgentExtractor"
Repository = "https://github.com/EastSword/AgentExtractor"

[tool.setuptools.packages.find]
include = ["agentextractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hypothesis]
max_examples = 200
